# Green-chemistry

./: .copier-answers.yml  README.md  env.yml  pyproject.toml  tox.ini
Green-chemistry/: .copier-answers.yml
Green-chemistry/docs/source/: conf.py
Green-chemistry/tests/: test_example_module.py
data/: Data_for_classifier.py  README.md  csv_to_tokens.py  random_forest_classifier.py  random_forest_regressor.py
data/Data_Training/: Dreher_and_Doyle_input_data.csv  Dreher_and_Doyle_tokenized_data.csv  buchwald_hartwig_components.csv  buchwald_hartwig_components_tokenized.csv  data_to_train_classifier.csv
data/Trained_Models/buchwald_classifier_1/: data_spec.pb  gradient_boosted_trees_header.pb  header.pb  nodes-00000-of-00001
data/Trained_Models/buchwald_regressor_1/: data_spec.pb  header.pb  nodes-00000-of-00001
notebooks/: project_report.ipynb
src/: script_interface.py
src/green_chemistry/: atom_economy.py  convert_pictograms.py  convert_svg_pictograms_html.py  energy_efficiency.py  extraction_picto.py  file_regressor.py  metal_center.py  picto.py  pressure_efficiency.py  script_interface.py  temperature_efficiency.py  tokenizer_home_made.py
src/green_chemistry/buchwald_regressor_1/: gradient_boosted_trees_header.pb
tests/: resquest.http  test.py  test_add_functions.py  test_analyze.py  test_convert_pictograms.py  test_economy_atom.py  test_extract_pictogram_urls.py  test_file_regressor.py  test_get_pictos_mock.py  test_metal_center.py  test_picto.py  test_pressure_efficiency.py  test_render_SVG.py  test_script_interface.py  test_temperature_efficiency.py
