[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Green-chemistry"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "None"
dependencies = [
    # "rdkit",
]
authors = [
    {name = "Clara Veron", email = "clara.veron@epfl.ch"},
    {name = "Inès Hamouni", email = "ines.hamouni@epfl.ch"},
    {name = "Thomas Cohen", email = "thomas.cohen@epfl.ch"},
    {name = "Edward Vandoderer", email = "edward.vondoderer@epfl.ch"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/InesHamouni/Green-chemistry-ppchem-project-"
tracker = "https://github.com/InesHamouni/Green-chemistry-ppchem-project-/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "streamlit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "tox",
    "requests",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.version]
path = "src/green_chemistry/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
